# CRACK

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  test.txt
.CRACK/: config.toml
.aico/: project.json
.github/workflows/: CRACK-code-review.yml  release.yml
CRACK/: cli.py  constants.py  core.py
CRACK/agent/: __init__.py  config.py  github_review.py  models.py  pr_context.py  reviewer.py
CRACK/agent/code_checks/: __init__.py  architecture_modularity.py  base.py  design_exception_context.py  prompts.py
CRACK/agent/tools/: __init__.py  base.py  diff.py  embeddings.py  filesystem.py  github.py
documentation/: command_line_reference.md  config_cookbook.md  documentation_generation.md  github_setup.md  jira_integration.md  linear_integration.md  troubleshooting.md
eval/: run_eval.py  run_eval.slurm
tests/: test_deploy.py
