[project]
name = "CRACK.bot"
description = "AI code review tool that works with any language model provider. It detects issues in GitHub pull requests or local changes—instantly, reliably, and without vendor lock-in."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dynamic = ["version"]
keywords = [
    "static code analysis",
    "code review",
    "code quality",
    "ai",
    "coding",
    "assistant",
    "llm",
    "github",
    "automation",
    "devops",
    "developer tools",
    "github actions",
    "workflows",
    "github-actions",
    "git",
    "pull-request",
    "jira",
    "linear",
    "gitlab",
    "ci-cd",
    "static analysis",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Bug Tracking",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ai-microcore>=5.0.0,<5.1.0",
    "GitPython>=3.1.44,<4",
    "unidiff>=0.7.5,<0.8",
    "google-genai>=1.56.0,<1.57.0",
    "anthropic>=0.57.1,<1",
    "typer>=0.16.0,<0.22",
    "ghapi~=1.0.8",
    "jira>=3.10.5,<4",
    "pydantic>=2.12.5,<3",
    # fastcore dependency is fixed because 1.12+ does not work in python 3.11, used by ghapi
    # https://github.com/AnswerDotAI/fastcore/pull/752
    "fastcore~=1.11.3",
    # Agent-based reviewer dependencies
    "pydantic-ai>=1.0.0,<2",
    "tiktoken>=0.7.0,<1",
    "requests>=2.31.0,<3",
    # Embedding-based semantic search
    "faiss-cpu>=1.7.0,<2",
    "fastembed>=0.4.0",
    "chonkie[code]>=1.0.0,<2",
]

[project.urls]
Homepage = "https://github.com/Dishank422/CRACK"
Repository = "https://github.com/Dishank422/CRACK"
Documentation = "https://github.com/Dishank422/CRACK#readme"
"Bug Tracker" = "https://github.com/Dishank422/CRACK/issues"

[project.scripts]
CRACK = "CRACK.entrypoint:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["CRACK"]

[dependency-groups]
dev = [
    "flake8",
    "flake8-pyproject",
    "black",
    "pylint",
    "pyflakes",
]
test = [
    "pytest>=7.4.3,<10",
    "pytest-asyncio>=0.21.0,<2",
    "pytest-mock>=3.12.0,<4",
    "pytest-cov>=4.1.0,<8",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv --capture=no --log-cli-level=INFO"
testpaths = [
    "tests",
]

[tool.black]
line-length = 100

[tool.flake8]
extend-ignore = ["E203"]
max-line-length = 100
